--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../API/WWWroot",
+            "outputPath": "../dist/client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
